# Luna-ML

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  regression.cpp  xor_example.cpp
include/lunaml/: lunaml.hpp
include/lunaml/core/: autograd.hpp  random.hpp  tensor.hpp  tensor_ops.hpp  types.hpp
include/lunaml/data/: csv_dataset.hpp  dataloader.hpp  dataset.hpp
include/lunaml/loss/: bce.hpp  cross_entropy.hpp  loss.hpp  mse.hpp
include/lunaml/metrics/: metrics.hpp
include/lunaml/nn/: activation.hpp  batchnorm.hpp  conv2d.hpp  dropout.hpp  flatten.hpp  linear.hpp  module.hpp  pooling.hpp  sequential.hpp
include/lunaml/optim/: adam.hpp  optimizer.hpp  rmsprop.hpp  sgd.hpp
include/lunaml/utils/: logger.hpp  serialization.hpp
src/core/: autograd.cpp  random.cpp  tensor.cpp  tensor_ops.cpp
src/data/: csv_dataset.cpp  dataloader.cpp  dataset.cpp
src/loss/: bce.cpp  cross_entropy.cpp  mse.cpp
src/metrics/: metrics.cpp
src/nn/: activation.cpp  batchnorm.cpp  conv2d.cpp  dropout.cpp  flatten.cpp  linear.cpp  module.cpp  pooling.cpp  sequential.cpp
src/optim/: adam.cpp  rmsprop.cpp  sgd.cpp
src/utils/: logger.cpp  serialization.cpp
tests/: CMakeLists.txt  test_autograd.cpp  test_integration.cpp  test_layers.cpp  test_loss.cpp  test_optimizers.cpp  test_tensor.cpp
